--- a/markup/components/spinner/spinner.styl
+++ b/markup/components/spinner/spinner.styl
@@ -7,6 +7,7 @@
 	background-color #dcd9d6
 	border-radius 5px
 	text-align center
+	overflow hidden
 	&__input
 		position relative
 		border none
@@ -50,3 +51,7 @@
 		left 0
 		&:after
 			bg($spinner-minus)
+
+
+.spinner.spinner_second
+	background transparent
