--- a/markup/pages/index.jade
+++ b/markup/pages/index.jade
@@ -31,7 +31,7 @@ html(class="no-js", lang="ru")
 
 				.page-news
 					.page-news__in
-						h2.page-news__title Наш блог
+						h2.page-news__title <a href='#link'>Наш блог</a>
 						ul.page-news__list
 							li.page-news__item
 								.page-news__item-image
@@ -79,6 +79,9 @@ html(class="no-js", lang="ru")
 
 
 							p Подробно о стоимости доставки цветов в Новосибирске читайте здесь. Купите цветы в нашем магазине и чаще радуйте близких!
+
+						.page-desc__more-w
+							a.page-desc__more(href='#link') Показать
 
 
 				.page__buffer
