--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -2,6 +2,8 @@
 	border 3px solid rgba(0,0,0,.1)
 	min-height 50px
 	border-radius 10px
+	+below($tablet)
+		border 3px solid transparent
 	&__list
 		position relative
 		margin 1px
@@ -18,6 +20,16 @@
 			display inline-block
 			vertical-align top
 			width 100%
+			+below($tablet)
+				display none
+		+below($tablet)
+			margin auto
+			padding 0
+			width 260px
+			background-color transparent
+			text-align left
+			text-align-last left
+
 	&__item
 		position relative
 		// margin-right 98px
@@ -34,6 +46,10 @@
 			content ""
 			margin-top -4px
 			bg($arrow-down)
+			+below($tablet)
+				display none
+		+below($tablet)
+			width 49%
 
 	&__link
 		padding-top 7px
