--- a/markup/components/footer/footer.jade
+++ b/markup/components/footer/footer.jade
@@ -18,7 +18,25 @@ mixin footer(data)
 					.footer__filter
 						+filter()
 					.footer__nav
-						+menu().menu_style-second
+						nav.menu.menu_style-second
+							.menu__list-w
+								ul.menu__list
+									li.menu__item
+										a.menu__link(href="#link") О нас
+									li.menu__item
+										a.menu__link(href="#link") Каталог
+									li.menu__item
+										a.menu__link(href="#link") Доставка
+									li.menu__item
+										a.menu__link(href="#link") Оплата
+									li.menu__item
+										a.menu__link(href="#link") Вакансии
+									li.menu__item
+										a.menu__link(href="#link") Корпоративным клиентам
+									li.menu__item
+										a.menu__link(href="#link") Портфолио
+									li.menu__item
+										a.menu__link(href="#link") Контакты
 
 					.footer__row
 						.footer__col.footer__col_first
