--- a/markup/components/header/header.jade
+++ b/markup/components/header/header.jade
@@ -2,41 +2,42 @@ include ../menu/menu
 
 
 mixin header(data)
-	header.header
-		.header__body
-			.header__in
-				.header__logo
-					a.logo(href="/")
-						img.logo__image(src="%=static=%images/general/logo.png", alt="La Rose - студия цветов")
-					.header__cities
-						a.header__cities-link(href="#link") Новосибирск
-						a.header__cities-link(href="#link") Барнаул
-				.header__left
-					.header__phones
-						.header-phones
-							.header-phones__top
-								.header-phones__code
-									img(src="%=static=%images/general/phone-code.png", alt="phone code")
-								.header-phones__w
-									.header-phones__phone <span>(383)</span> 292-16-25<i>,</i>
-									.header-phones__phone <span>(383)</span> 222-60-70
-							a.header-phones__button(href="#button") Мы Вам перезвоним
+	header.header.header_fixed
+		.header__in
+			.header__logo
+				a.logo(href="/")
+					img.logo__image(src="%=static=%images/general/logo.png", alt="La Rose - студия цветов")
+				.header__cities
+					a.header__cities-link(href="#link") Новосибирск
+					a.header__cities-link(href="#link") Барнаул
+			.header__left
+				a.header__menu-trigger(href='#menu') Меню
+				.header__phones
+					.header-phones
+						.header-phones__top
+							.header-phones__code
+								img(src="%=static=%images/general/phone-code.png", alt="phone code")
+							.header-phones__w
+								.header-phones__phone <span>(383)</span> 292-16-25<i>,</i>
+								.header-phones__phone <span>(383)</span> 222-60-70
+						a.header-phones__button(href="#button") Мы Вам перезвоним
 
-					.header__working-hours
-						.working-hours Работаем 24 часа
+				.header__working-hours
+					.working-hours Работаем 24 часа
 
-					.header__basket
-						.head-basket
-							a.head-basket__button(href="#button")
-								//- <span>В корзине</span> пусто
-								<span>В корзине:</span> 1 шт. на сумму 25950 руб.
+				.header__basket
+					.head-basket
+						a.head-basket__button(href="#button")
+							//- <span>В корзине</span> пусто
+							<span>В корзине:</span> 1 шт. на сумму 25950 руб.
+							span.head-basket__quant 2
 
+					a.header__pers-order.button.button_style-1(href="#button") Индивидуальный заказ <span class='header__pers-order-faq'>&#63;</span>
 
-						a.header__pers-order.button.button_style-1(href="#button") Индивидуальный заказ <span class='header__pers-order-faq'>&#63;</span>
-
-					.header__catalog
-						.head-catalog
-							a.head-catalog__button(href="#catalog") Каталог
+				.header__catalog
+					.head-catalog
+						a.head-catalog__button(href="#catalog") Каталог
+						.head-catalog__list-w
 							ul.head-catalog__list
 								li.head-catalog__item
 									a.head-catalog__link(href="#link") Букеты
@@ -49,16 +50,98 @@ mixin header(data)
 								li.head-catalog__item
 									a.head-catalog__link(href="#link") Цветы поштучно
 
-					.header__user-auth
-						.head-user-auth
-							a.head-user-auth__icon(href='#auth')
-							ul.head-user-auth__list
-								li.head-user-auth__item
-									a.head-user-auth__link.head-user-auth__link-enter(href="#link") Вход
-								li.head-user-auth__item
-									a.head-user-auth__link.head-user-auth__link-reg(href="#link") Регистрация
-		.header__bottom
-			.header__in
-				+menu()
+				.header__user-auth
+					.head-user-auth
+						a.head-user-auth__icon(href='#auth')
+						ul.head-user-auth__list
+							li.head-user-auth__item
+								a.head-user-auth__link.head-user-auth__link-enter(href="#") Вход
+							li.head-user-auth__item
+								a.head-user-auth__link.head-user-auth__link-reg(href="#") Регистрация
+
+						.tabs
+							ul.tabs__nav
+								li.tabs__nav-item.active(data-class='first')
+									a.tabs__nav-link(href="#link") Вход
+								li.tabs__nav-item(data-class='second')
+									a.tabs__nav-link(href="#link") Регистрация
+							.tabs__w
+								.tabs__tab.tabs__tab_first.active
+
+									form.head-user-auth__form(action="#" method='post')
+										.head-user-auth__form-body
+											.head-user-auth__form-field
+												input.head-user-auth__input(type="text", value="", placeholder="E-mail*")
+											.head-user-auth__form-field
+												input.head-user-auth__input(type="password", value="", placeholder="Пароль*")
+											.head-user-auth__form-bottom
+												.head-user-auth__form-checkbox
+													input.head-user-auth__checkbox#check-remember(type="checkbox", value="some")
+													label.head-user-auth__checkbox-label(for="check-remember") Запомнить меня
+												a.head-user-auth__forget(href="#forget") Забыли свой пароль?
+
+										.head-user-auth__form-submit
+											input.head-user-auth__submit(type="submit", value="Войти")
+
+
+								.tabs__tab.tabs__tab_second
+
+									form.head-user-auth__form(action="#" method='post')
+										.head-user-auth__form-body
+											.head-user-auth__form-field
+												input.head-user-auth__input(type="text", value="", placeholder="E-mail*")
+											.head-user-auth__form-field
+												input.head-user-auth__input(type="password", value="", placeholder="Пароль*")
+											.head-user-auth__form-field
+												input.head-user-auth__input(type="password", value="", placeholder="Повторите пароль*")
+											.head-user-auth__form-field.head-user-auth__form-field_captcha
+												.head-user-auth__captcha-text Защита от автоматической регистрации
+												.head-user-auth__captcha-image
+													img(src="assets/images/content/captcha.jpg", alt="captcha")
+											.head-user-auth__form-field
+												input.head-user-auth__input(type="text", value="", placeholder="Введите слово на картинке:*")
+
+
+
+										.head-user-auth__form-submit
+											input.head-user-auth__submit(type="submit", value="Зарегистрироваться")
+
+
+				.header__search
+					.header-search
+						form.header-search__form(action="")
+							input.header-search__input(type="text", value="", placeholder="Что ищем?")
+							a.header-search__button(href='#search') Поиск
+
+			.header__menu
+				nav.menu&attributes(attributes)
+					.menu__list-w
+						ul.menu__list
+							li.menu__item
+								a.menu__link(href="#link") О нас
+							li.menu__item
+								a.menu__link(href="#link") Каталог
+							li.menu__item
+								a.menu__link(href="#link") Доставка
+							li.menu__item
+								a.menu__link(href="#link") Оплата
+							li.menu__item
+								a.menu__link(href="#link") Вакансии
+							li.menu__item
+								a.menu__link(href="#link") Корпоративным клиентам
+							li.menu__item
+								a.menu__link(href="#link") Портфолио
+							li.menu__item
+								a.menu__link(href="#link") Контакты
+
+						.menu__buttons
+							a.menu__button(href="#button") Хиты продаж
+							a.menu__button(href="#button") Сведебная страничка
+							a.menu__button(href="#button") Индивидуальный заказ
+
+
+
+		//- .header__bottom
+			//- .header__in
 
 
