--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -1,28 +1,27 @@
 .header
 	position relative
-	z-index 1
+	z-index 10
 	&__in
 		@extends .in
 		font-size 0
 		clr()
-	&__body
+	.header__in
 		position relative
-		.header__in
-			position relative
-			padding-top 13px
-			padding-bottom 16px
-			min-height 148px
-			&:before
-				position absolute
-				right -40px
-				left -40px
-				bottom 0
-				content ""
-				width 1260px
-				height 8px
-				background transparent url('%=static=%/general/line.png') 0 0 repeat-x
-			+below($tablet)
-				padding-top 60px
+		padding-top 13px
+		padding-bottom 16px
+		min-height 120px
+		&:before
+			position absolute
+			right -40px
+			left -40px
+			bottom 0
+			content ""
+			width 1260px
+			height 8px
+			background transparent url('%=static=%/general/line.png') 0 0 repeat-x
+		+below($tablet)
+			padding-top 60px
+			min-height 180px
 	&__logo,
 	&__phones,
 	&__working-hours,
@@ -36,20 +35,26 @@
 		padding-top 3px
 		width r-percent(261,1200)
 		height 78px
+		+below($tablet)
+			width r-percent(550,1200)
+			min-width r-percent(500,1200)
 	&__logo,
 	&__left
 		float left
 	&__left
-		position relative
+		position static
+		z-index 1
 		float right
 		width r-percent(880,1200)
 		font-size 0
 		+below($tablet)
 			position absolute
 			top 0
+			// left r-percent(90,1200)
 			left 0
 			right 0
-			width 100%
+			float none
+			width auto
 			font-size 16px
 			display inline-block
 			vertical-align top
@@ -58,27 +63,51 @@
 				content ""
 				display inline-block
 				width 100%
+	&__menu-trigger
+		margin 20px 0px 20px 0px
+		display none
+		bg($burger-icon)
+		text-indent -9999px
+		+below($tablet)
+			display inline-block
 	&__cities
 		margin-top 11px
 		padding-left 3px
 		font-family $pt-serif-bldit
 		line-height 36px
+		+below($tablet-l)
+			margin-top 0
+		+below($tablet)
+			margin-top 2px
+		+below(570px)
+			margin-top 11px
 	&__cities-link
 		margin-left 42px
 		font-size 14px
 		text-decoration underline
 		color $text-color
+		+below($mobile-l)
+			margin-left 0
+			display block
+			line-height 20px
 		&:hover
 			text-decoration none
 		&:first-child
 			margin-left 0
 	&__phones
 		position relative
-		top 60px
+		// top 60px
 		padding-top 13px
 		margin-right r-percent(50px,880)
 		width r-percent(225,880)
-
+		+below($tablet)
+			position absolute
+			top 60px
+			right 10px
+			margin-right 0
+			padding-top 0
+			width r-percent(600,1200)
+			min-width r-percent(400,1200)
 	&__working-hours
 		padding-top 12px
 		margin-right r-percent(60,880)
@@ -95,13 +124,15 @@
 			width r-percent(434,880)
 			// padding-right 20px
 		+below($tablet)
+			margin-top 10px
+			margin-left r-percent(20,1200)
 			padding 0
 			width 40px
 			background none
 
 	&__pers-order
 		position relative
-		margin-left 4px
+		margin-left 14px
 		+below($desktop)
 			margin-right 20px
 			display block
@@ -121,26 +152,59 @@
 		padding-top 26px
 		// width r-percent(166,880)
 		width r-percent(166,880)
-
+		+below($tablet)
+			padding-top 10px
+			width auto
 
 	&__catalog
-		position relative
+		// position relative
 		display none
 		+below($tablet)
+			margin-top 10px
+			width r-percent(500, 1200)
 			display inline-block
 			vertical-align top
-	&__bottom
-		margin-bottom -10px
+	&__search
+		margin-right -6px
+		padding 10px 0px 10px 0
+		display none
 		+below($tablet)
-			position absolute
+			width 30px
+			display inline-block
+			vertical-align top
+
+	&__menu
+		position absolute
+		left 0
+		right 0
+		top 100%
+		margin auto
+		width 1180px
+		+below($desktop)
+			width auto
+		+below($tablet)
+			position static
+			z-index 0
 			top 0
-			left r-percent(10,1200)
-			width 50px
+			right auto
+			left 0
+			padding 10px 8px
+			display inline-block
+			vertical-align top
+			margin 0 0 0 0
+			float left
+			width auto
+		.menu
+			padding-top 6px
+			+below($tablet-l)
+				padding 2px r-percent(30,1200) 8px r-percent(30, 1200)
+				white-space nowrap
 
 .logo
 	display block
 
 .header-phones
+	text-align right
 	&__top
 		white-space nowrap
 	&__code,
@@ -160,9 +224,14 @@
 			max-width 100%
 			height auto
 		+below($desktop)
-			margin-top 0
+			margin-top 6px
+		+below($tablet)
+			margin-top 8px
+			margin-right r-percent(8,1200)
 	&__w
 		margin-bottom 12px
+		+below($mobile-l)
+			margin-bottom 6px
 	&__phone
 		margin-bottom 11px
 		font-family $pt-serif-bld
@@ -173,6 +242,14 @@
 		i
 			display none
 		+below($desktop)
+			font-size 20px
+		+below($tablet)
+			font-size 26px
+		+below($mobile-l)
+			font-size 24px
+		+below($mobile-m)
+			font-size 22px
+		+below($mobile)
 			font-size 20px
 	&__button
 		position relative
@@ -196,9 +273,13 @@
 		+below($tablet-l)
 			margin-left 0
 			display none
-		// +below($tablet-l)
+			margin-right 36px
+			white-space nowrap
 
-
+		+below($tablet)
+			display block
+		+below($mobile)
+			font-size 12px
 .working-hours
 	bg($working-hours)
 	text-indent -9999px
@@ -215,6 +296,7 @@
 		font-size 14px
 		line-height 1
 		text-decoration none
+		white-space normal
 		+below(880px)
 			padding-top 8px
 		span
@@ -222,6 +304,25 @@
 			line-height 18px
 			+below($tablet)
 				display none
+		.head-basket__quant
+			position absolute
+			bottom 0
+			right 0
+			z-index 1
+			display none
+			padding 0 4px
+			min-width 20px
+			background #FFF
+			font-family $pt-sans-bld
+			color $text-color
+			text-align center
+			text-indent 0
+			text-decoration none
+			border 1px solid $text-color
+			border-radius 50%
+			+below($tablet)
+				display block
+
 		+below($tablet)
 			padding 0
 			width 40px
@@ -239,28 +340,35 @@
 
 
 .head-catalog
+	// position relative
 	&__button
 		border 1px solid $text-color
 		display block
+		vertical-align top
 		border-radius 3px
-		padding 7px 15px 8px
+		padding 10px 15px 12px
 		color $text-color
 		font-family $pt-sans-bld
-		font-size 14px
+		font-size 16px
 		text-align center
 		text-decoration none
 		&:hover
 			text-decoration underline
-	&__list
+	&__list-w
 		display none
-	&__list_active
+	&__list-w_active
+		position absolute
+		top 60px
+		left 0
+		right 0
+		padding 20px
 		display block
-
+		background #f1eeeb
 	&__item
 		margin-bottom 10px
 	&__link
 		font-family $pt-sans-bldit
-		font-size 14px
+		font-size 18px
 		color $text-color
 		text-decoration underline
 		&:hover
@@ -270,12 +378,16 @@
 	padding-left r-percent(40, 166)
 	+below($desktop)
 		padding-left 20px
+	+below($tablet)
+		padding-left 0
 	&__icon
 		bg($user-icon)
 		display none
 		+below($tablet)
 			display block
-	// &__list
+	&__list
+		+below($tablet)
+			display none
 	&__item
 		margin-bottom 20px
 	&__link
@@ -305,34 +417,231 @@
 			margin-top -6px
 			bg($reg-icon)
 
+	&__form-field
+		margin-bottom 15px
+	&__input
+		border 1px solid #d4d0cb
+		padding 10px
+		width 100%
+		height 36px
+		background #f1eeeb
+		font-family $pt-sans-bldit
+		font-size 14px
+		color $text-color
+		+placeholder()
+			color $text-color
+
+	&__form-bottom
+		clr()
+
+	&__form-checkbox
+		float left
+	&__checkbox
+		border 1px solid $text-color
+		margin-right 5px
+		width 14px
+		height 14px
+	&__checkbox-label
+		font-family $pt-sans-bldit
+		font-size 14px
+		line-height 18px
+		vertical-align top
+		cursor pointer
+	&__forget
+		float right
+		font-family $pt-sans-bldit
+		font-size 14px
+		color $text-color
+		line-height 18px
+		text-decoration underline
+		&:hover
+			text-decoration none
+
+	&__captcha-text
+		margin-bottom 10px
+		font-family $pt-sans-bldit
+		font-size 14px
+		color $text-color
+	&__form-body
+		padding-bottom 20px
+	&__form-submit
+		position absolute
+		right 0
+		bottom -112px
+		left 0
+		margin-left -15px
+		margin-right -15px
+		padding 30px 15px
+	&__submit
+		border none
+		padding 10px
+		width 100%
+		background #f1eeeb
+		font-family $pt-sans-bldit
+		font-size 16px
+		color $text-color
+		box-shadow 0px 5px 0px #e0deda,0px -5px 0px #e0deda,-5px 0px 0px #e0deda,5px 0px 0px #e0deda,
+			2px 7px 0px #b9b3ad,-2px 7px 0px #b9b3ad,2px -7px 0px #b9b3ad,-2px -7px 0px #b9b3ad,
+			7px 2px 0px #b9b3ad,7px -2px 0px #b9b3ad,-7px 2px 0px #b9b3ad,-7px -2px 0px #b9b3ad,
+			4px 10px 0px #efeeec,-4px 10px 0px #efeeec,4px -10px 0px #efeeec,-4px -10px 0px #efeeec,
+			10px 4px 0px #efeeec,10px -4px 0px #efeeec,-10px 4px 0px #efeeec,-10px -4px 0px #efeeec,
+			6px 12px 0px #c5c0bb,-6px 12px 0px #c5c0bb,6px -12px 0px #c5c0bb,-6px -12px 0px #c5c0bb,
+			12px 6px 0px #c5c0bb,12px -6px 0px #c5c0bb,-12px 6px 0px #c5c0bb,-12px -6px 0px #c5c0bb
+
+
+
+
+	.tabs
+		display none
+		background-color #f1eeeb
+	.tabs__nav
+		margin-bottom 10px
+	.tabs__nav-item
+		display inline-block
+		vertical-align top
+		width 50%
+	.tabs__nav-link
+		padding 10px
+		display block
+		background rgba(0,0,0,0.1)
+		font-family $pt-sans-bld
+		color $text-color
+		text-align center
+		text-decoration none
+		&:hover
+			text-decoration underline
+	.tabs__nav-item
+		&.active
+			.tabs__nav-link
+				background #f1eeeb
+
+	.tabs_active
+		position absolute
+		top 75px
+		left 15px
+		right 15px
+		z-index 10
+		display none
+		box-shadow 0px 5px 0px #e0deda,0px -5px 0px #e0deda,-5px 0px 0px #e0deda,5px 0px 0px #e0deda,
+				2px 7px 0px #b9b3ad,-2px 7px 0px #b9b3ad,2px -7px 0px #b9b3ad,-2px -7px 0px #b9b3ad,
+				7px 2px 0px #b9b3ad,7px -2px 0px #b9b3ad,-7px 2px 0px #b9b3ad,-7px -2px 0px #b9b3ad,
+				4px 10px 0px #efeeec,-4px 10px 0px #efeeec,4px -10px 0px #efeeec,-4px -10px 0px #efeeec,
+				10px 4px 0px #efeeec,10px -4px 0px #efeeec,-10px 4px 0px #efeeec,-10px -4px 0px #efeeec,
+				6px 12px 0px #c5c0bb,-6px 12px 0px #c5c0bb,6px -12px 0px #c5c0bb,-6px -12px 0px #c5c0bb,
+				12px 6px 0px #c5c0bb,12px -6px 0px #c5c0bb,-12px 6px 0px #c5c0bb,-12px -6px 0px #c5c0bb
+		+below($tablet)
+			display block
+	// .tabs__w
+	.tabs__tab
+		padding 20px 20px 0
+
+.header-search
+	font-size 14px
+	&__form
+		font-size 0
+	&__input,
+	&__button
+		display inline-block
+		vertical-align top
+		font-family $pt-serif-bldit
+		font-size 14px
+		color $text-color
+	&__input
+		position relative
+		z-index 1
+		border 1px solid $text-color
+		padding 10px
+		width 254px
+		background #fff
+		display none
+		opacity 0
+		transition opacity .3s ease
+	&__input_active
+		position absolute
+		top 10px
+		right r-percent( 110, 1200 )
+		// left r-percent( 60, 1200 )
+		width 80%
+		display inline-block
+		opacity 1
+	&__button
+		margin-top 5px
+		border none
+		display block
+		bg($search-icon)
+		text-indent -9999px
+
+
+
+
+
 .header_fixed
 	position fixed
 	left 0
 	right 0
-	width 100%
 	background #f1eeeb url('../images/general/header-fixed-bg.png') 0 100% repeat-x
 	box-shadow 0 2px 0 #564d3e
-	z-index 2
-	.header__body
-		.header__in
+	z-index 11
+	.header__in
+		padding-top 14px
+		padding-bottom 16px
+		min-height 130px
+		&:before
+			display none
+		&:after
+			display none
+		+below($tablet-l)
 			padding-top 14px
-			padding-bottom 16px
-			&:after
-				display none
+			min-height 150px
+		+below($tablet)
+			padding-top 60px
+			min-height 150px
+		+below($mobile-l)
+			min-height 130px
 	.header__logo
 		margin-top 20px
-		margin-right 38px
-		width 216px
+		margin-right r-percent(0,1200)
+		width r-percent(216,1200)
+		+below($tablet)
+			margin-top 0
+			min-width 40%
+			height auto
+		+below($mobile-l)
+			min-width 50%
+	.header__left
+		width r-percent(954,1200)
+		clr()
+		+below($tablet)
+			width auto
+			text-align justify
+			&:after
+				content ""
+				display inline-block
+				width 100%
+
+
 
 	.header__phones
 		margin-top 10px
-		margin-right 30px
-		width 312px
+		margin-right  r-percent(30, 927)
+		width r-percent(312,927)
+		+below($tablet)
+			margin-top 10px
+			margin-right 0
+			width 50%
+			text-align right
+		+below(660px)
+			margin-top 0
+		+below($mobile-l)
+			margin-top 2px
 	.header__cities
 		display none
 
 	.header__working-hours
 		display none
+	.header-phones__top
+		+below($tablet)
+			white-space normal
 
 	.header-phones__code
 		display none
@@ -342,40 +651,80 @@
 		span,
 		i
 			display inline-block
+		i
+			+below($tablet)
+				display none
 		&:last-child
 			margin-left 5px
+			+below($tablet)
+				margin-left 0
+		+below($tablet)
+			white-space nowrap
+			display block
+			font-size 26px
+		+below($mobile-l)
+			font-size 20px
 
 	.header-phones__button
 		display none
 
 	.header__user-auth
 		display none
+		+below($tablet)
+			display inline-block
 
 	.header__basket
 		padding-right 0
-		width 584px
+		width r-percent(584,927)
 		background none
 		clr()
+		+below($tablet)
+			display inline-block
+			vertical-align top
+			width auto
 	.head-basket
-		width 330px
+		width r-percent(330, 584)
 		float left
+		+below($desktop)
+			float right
+		+below($tablet)
+			width 100%
+			float none
+	.header__catalog
+		+below($tablet)
+			display inline-block
+			vertical-align top
+	.header__search
+		+below($tablet)
+			display inline-block
+			vertical-align top
 	.header__pers-order
 		margin-top 10px
 		float right
-
-	.header__bottom
+		+below($desktop)
+			display none
+	// .header__menu-trigger
+	// 	+below($desktop)
+	// 		display none
+	.header__menu
 		margin-top -50px
 		padding-bottom 14px
-		.header__in
-			padding-left 0
-			padding-right 0
+		padding-left 0
+		padding-right 0
+		+below($tablet)
+			margin-top 0
 	.menu
 		padding-left 0
 		padding-right 0
 		float right
-		width 927px
+		width r-percent(927,1200)
 		background none
 		box-shadow none
+		+below($desktop)
+			padding-left 20px
+			padding-right 20px
+			float none
+			width auto
 	.menu__item
 		&:after
 			display none
