--- a/markup/components/menu/menu.jade
+++ b/markup/components/menu/menu.jade
@@ -1,21 +1,22 @@
 mixin menu(data)
 
 	nav.menu&attributes(attributes)
-		a.menu__burger(href='#menu') Меню
-		ul.menu__list
-			li.menu__item
-				a.menu__link(href="#link") О нас
-			li.menu__item
-				a.menu__link(href="#link") Каталог
-			li.menu__item
-				a.menu__link(href="#link") Доставка
-			li.menu__item
-				a.menu__link(href="#link") Оплата
-			li.menu__item
-				a.menu__link(href="#link") Вакансии
-			li.menu__item
-				a.menu__link(href="#link") Корпоративным клиентам
-			li.menu__item
-				a.menu__link(href="#link") Портфолио
-			li.menu__item
-				a.menu__link(href="#link") Контакты
+		//- a.menu__burger(href='#menu') Меню
+		.menu__list-w
+			ul.menu__list
+				li.menu__item
+					a.menu__link(href="#link") О нас
+				li.menu__item
+					a.menu__link(href="#link") Каталог
+				li.menu__item
+					a.menu__link(href="#link") Доставка
+				li.menu__item
+					a.menu__link(href="#link") Оплата
+				li.menu__item
+					a.menu__link(href="#link") Вакансии
+				li.menu__item
+					a.menu__link(href="#link") Корпоративным клиентам
+				li.menu__item
+					a.menu__link(href="#link") Портфолио
+				li.menu__item
+					a.menu__link(href="#link") Контакты
